Details
-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.17.0
-
None
-
3
-
9223372036854775807
Description
Distro: Debian 12
Kernel: 6.1.0-32-686-pae
Gcc: 12.2
lnet/klnds/socklnd/socklnd_lib.c: In function 'ksocknal_lib_recv_kiov':
lnet/klnds/socklnd/socklnd_lib.c:314:23: error: 'scratchiov' redeclared as different kind of symbol
314 | struct kvec *scratchiov = &scratch;
| ^~~~~~~~~~
lnet/klnds/socklnd/socklnd_lib.c:310:37: note: previous definition of 'scratchiov' with type 'struct kvec *'
310 | struct kvec *scratchiov)
| ~~~~~~~~~~~~~^~~~~~~~~~
lnet/klnds/socklnd/socklnd_lib.c:315:24: error: 'pages' redeclared as different kind of symbol
315 | struct page **pages = NULL;
| ^~~~~
lnet/klnds/socklnd/socklnd_lib.c:309:63: note: previous definition of 'pages' with type 'struct page **'
309 | ksocknal_lib_recv_kiov(struct ksock_conn *conn, struct page **pages,
| ~~~~~~~~~~~~~~^~~~~